--- a/_posts/2022-12-13-Hello.md
+++ b/_posts/2022-12-13-Hello.md
@@ -8,4 +8,4 @@ tags: [homelab,hardware]
 
 # Hello Homelab!!
 
-This is my first post on my new stie that will be used to docuemnt my homelab journey's Along with a few projects for work.
+This is my first post on my new site that will be used to docuemnt my homelab journey's Along with a few projects for work.
